syntax = "proto3";

package page;
option go_package="./page";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Page {
  string kind = 1;
  string id = 2;
  string status = 3;
  Blog blog = 4;
  google.protobuf.Timestamp published = 5;
  google.protobuf.Timestamp updated = 6;
  string url = 7;
  string selfLink = 8;
  string title = 9;
  string content = 10;
  Author author = 11;
}

message Blog {
  string id = 1;
}

message Author {
  string id = 1;
  string displayName = 2;
  string url = 3;
  Image image = 4;
}

message Image {
  string url = 1;
}

message ListReq {
  string blogId = 1;
  bool fetchBodies = 2;
  string status = 3;
  string view = 4;
}

message ListResp {
  string kind = 1;
  repeated Page items = 2;
}

message GetReq {
  string blogId = 1;
  string pageId = 2;
  string view = 3;
}

message DeleteReq {
  string blogId = 1;
  string pageId = 2;
  bool useTrash = 3;
}

message InsertReq {
  string blogId = 1;
  Page page = 2;
}

message PatchReq {
  string blogId = 1;
  string pageId = 2;
  Page page = 3;
}

message UpdateReq {
  string blogId = 1;
  string pageId = 2;
  Page page = 3;
}

service PageService {
  rpc List(ListReq) returns(ListResp);
  rpc Get(GetReq) returns(Page);
  rpc Delete(DeleteReq) returns(google.protobuf.Empty);
  rpc Insert(InsertReq) returns(Page);
  rpc Patch(PatchReq) returns(Page);
  rpc Update(UpdateReq) returns(Page);
}
